fix header spacing

--- a/themes/concise/source/css/_partial/header.styl
+++ b/themes/concise/source/css/_partial/header.styl
@@ -5,10 +5,11 @@
   //background: linear-gradient(to bottom,#c63a3a 0,#c43837 29%,#c13635 55%,#bd3232 55%,#ba3030 77%,#b32b2b 100%);
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
 
-
   h1
     font-weight normal
     font-size 2em
+    @media screen and (max-width: 600px)
+      font-size 1.85em
     line-height 55px
     a
       color #f5f5f5;
